<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_by_date"
                android:title="@string/sort_by_date" />
            <item
                android:id="@+id/sort_by_priority"
                android:title="@string/sort_by_priority" />
            <item
                android:id="@+id/sort_by_category"
                android:title="@string/sort_by_category" />
        </menu>
    </item>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_categories"
        android:title="@string/categories"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>